// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleTile/> rendering simple tile with default props to match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  position: relative;
  overflow-wrap: anywhere;
  background: #F9F9F9;
  border: 1px solid #5F5F5F;
  border-radius: 6px;
  font-family: 'Poppins',sans-serif;
  color: #404040;
  height: 145px;
  width: 180px;
}

.c0:hover:not([disabled]) {
  box-shadow: 0px 2px 16px RGBA(0,0,0,0.16);
}

.c0:disabled {
  cursor: default;
  color: #5F5F5F;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
  }
}

<button
    aria-label="simple-tile"
    class="c0"
  />
</DocumentFragment>
`;

exports[`<SimpleTile/> rendering simple tile with test props to match snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
  position: relative;
  overflow-wrap: anywhere;
  background: #F9F9F9;
  border: 1px solid #5F5F5F;
  border-radius: 6px;
  font-family: 'Poppins',sans-serif;
  color: #404040;
  height: 145px;
  width: 180px;
}

.c0:hover:not([disabled]) {
  box-shadow: 0px 2px 16px RGBA(0,0,0,0.16);
}

.c0:disabled {
  cursor: default;
  color: #5F5F5F;
}

@media (max-width:767px) {
  .c0 {
    width: 100%;
  }
}

<button
    aria-label="simple-tile"
    class="c0"
  >
    <div
      role="test"
    >
      wen lambo
    </div>
  </button>
</DocumentFragment>
`;
